// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockAlignmentUI should match snapshot when controls are hidden 1`] = `
<div>
  <div
    class="components-dropdown components-dropdown-menu components-toolbar"
    tabindex="-1"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Align"
      class="components-button components-dropdown-menu__toggle has-icon"
      data-toolbar-item="true"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 5.5h8V4H5v1.5ZM5 20h8v-1.5H5V20ZM19 9H5v6h14V9Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`BlockAlignmentUI should match snapshot when controls are visible 1`] = `
<div>
  <div
    class="components-toolbar"
    icon="[object Object]"
    label="Align"
  >
    <div>
      <button
        aria-label="None"
        aria-pressed="false"
        class="components-button components-toolbar__control has-icon"
        data-toolbar-item="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 5.5H5V4h14v1.5ZM19 20H5v-1.5h14V20ZM5 9h14v6H5V9Z"
          />
        </svg>
      </button>
    </div>
    <div>
      <button
        aria-label="Align left"
        aria-pressed="true"
        class="components-button components-toolbar__control is-pressed has-icon"
        data-toolbar-item="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 5.5h8V4H5v1.5ZM5 20h8v-1.5H5V20ZM19 9H5v6h14V9Z"
          />
        </svg>
      </button>
    </div>
    <div>
      <button
        aria-label="Align center"
        aria-pressed="false"
        class="components-button components-toolbar__control has-icon"
        data-toolbar-item="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 5.5H5V4h14v1.5ZM19 20H5v-1.5h14V20ZM7 9h10v6H7V9Z"
          />
        </svg>
      </button>
    </div>
    <div>
      <button
        aria-label="Align right"
        aria-pressed="false"
        class="components-button components-toolbar__control has-icon"
        data-toolbar-item="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 5.5h-8V4h8v1.5ZM19 20h-8v-1.5h8V20ZM5 9h14v6H5V9Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
